# SlideForge

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  pyproject.toml
src/slideforge/: __init__.py  __main__.py  app.py  audio.py  cli.py  environment.py  powerpoint.py  runtime.py  settings.py  subtitles.py  video.py
